JACOCO-180 Fix QG: use Collections.toList() (#268)