@@ -24,7 +24,6 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import org.sonar.api.batch.sensor.SensorContext;
 import org.sonar.api.config.Configuration;
 
@@ -50,7 +49,7 @@ public class ModuleCoverageContext {
             .stream()
             .map(Path::of)
             .map(dir -> dir.isAbsolute() ? dir : baseDir.resolve(dir))
-            .collect(Collectors.toList());
+            .toList();
     return new ModuleCoverageContext(moduleKey, baseDir, sourceDirectories);
   }
 
